# MotoManager-Api

./: .dockerignore  .env.example  .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  README.md
.github/workflows/: ci.yml  docker-publish.yml  release-please.yml
bruno/: bruno.json
bruno/Admin/Currencies/: create-currency.bru  delete-currency.bru  list-currencies.bru  update-currency.bru
bruno/Admin/Users/: create-user.bru  delete-user.bru  list-users.bru  update-user.bru
bruno/Auth/: login.bru  logout.bru  me.bru  register.bru
bruno/Currencies/: list-currencies.bru
bruno/Documents/: delete-document.bru  list-documents.bru  update-document.bru  upload-document.bru
bruno/Home/: get-home-data.bru
bruno/Locations/: create-location.bru  delete-location.bru  list-locations.bru  update-location.bru
bruno/Motorcycles/: create-motorcycle.bru  delete-motorcycle.bru  get-motorcycle.bru  list-motorcycles.bru  update-motorcycle.bru
bruno/Motorcycles/Issues/: create-issue.bru  delete-issue.bru  list-issues.bru  update-issue.bru
bruno/Motorcycles/Maintenance/: create-maintenance.bru  delete-maintenance.bru  list-maintenance.bru  update-maintenance.bru
bruno/Motorcycles/Previous-Owners/: create-previous-owner.bru  delete-previous-owner.bru  list-previous-owners.bru  update-previous-owner.bru
bruno/Motorcycles/Torque-Specs/: create-torque-spec.bru  delete-torque-spec.bru  import-torque-specs.bru  list-torque-specs.bru  update-torque-spec.bru
bruno/Settings/: change-password.bru  delete-authenticator.bru  get-settings.bru  update-settings.bru
bruno/Stats/: get-stats.bru
bruno/environments/: local.bru  production.bru
migrations/: 001_initial_schema.sql  002_camelcase.sql  003_maintenance_parent_id.sql  004_shared_expenses.sql
src/: config.rs  error.rs  lib.rs  main.rs  models.rs
src/auth/: mod.rs  password.rs  session.rs
src/handlers/: admin.rs  auth.rs  documents.rs  expenses.rs  files.rs  home.rs  issues.rs  locations.rs  maintenance.rs  mod.rs  motorcycles.rs  passkey.rs  previous_owners.rs  settings.rs  stats.rs  torque_specs.rs
tests/: documents_test.rs  expenses_test.rs  motorcycles_test.rs
