[package]
name = "moto-manager-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "moto-manager-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
scrypt = "0.11"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
http = "1"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
url = "2"
base64 = "0.22"
password-hash = "0.5"
sha2 = "0.10"
hmac = "0.12"
futures = "0.3"
anyhow = "1"
