[package]
name = "moto-manager-api"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"

[[bin]]
name = "moto-manager-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
http = "1"
futures = "0.3"
anyhow = "1"
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation"] }
base64 = "0.22.1"
url = "2.5.8"
pdfium-render = "0.8.37"
